# biosim_inf200

./: .gitignore  README.md  requirements.txt  setup.cfg  tox.ini
doc/: classdoc.rst  conf.py  faunadoc.rst  index.html  index.rst  introduction.rst  landscapesdoc.rst  mapdoc.rst  simulationdoc.rst  test_faunadoc.rst  test_landscapesdoc.rst  test_mapdoc.rst  test_simulationdoc.rst  test_statisticaldoc.rst  test_visualisationdoc.rst  testdoc.rst  visualisationdoc.rst
examples/: check_sim.py
pip-wheel-metadata/biosim.dist-info/: METADATA
results/: data.csv
src/biosim/: __init__.py  fauna.py  landscapes.py  map.py  sim_hans.py  simulation.py  visualisation.py
src/biosim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_animals.py  test_biosim_interface.py  test_fauna.py  test_landscapes.py  test_map.py  test_simulation.py  test_statistical.py
