[metadata]
name = biosim
description = A population dynamics simulation written in Python
long_description = file: README.rst
author = Mohamed Radwan & Nasibeh Mohammadi
author_email = mohamed.radwan@nmbu.no & nasibeh.mohammadi@nmbu.no

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    matplotlib
    numpy
    pandas

[options.packages.find]
where=src